istio-deployed/monitoring-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.172.165.147.47.nip.io"
    - "jaeger.172.165.147.47.nip.io"
    - "prometheus.172.165.147.47.nip.io"
    - "grafana.172.165.147.47.nip.io"
