istio-deployed/historical-network-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: historical-network-gateway
  namespace: historical-network
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "historical-network.172.165.147.47.nip.io"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: historical-network
  namespace: historical-network
spec:
  hosts:
  - "historical-network.172.165.147.47.nip.io"
  gateways:
  - historical-network-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: historical-network
        port:
          number: 8080
